--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\natha\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe"
+    "python.pythonPath": "C:\\Users\\nickp\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe",
+    "jupyter.jupyterServerType": "local"
 }
