Misc Updates + added nates shitty sort algo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.pythonPath": "C:\\Users\\nickp\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe",
-    "jupyter.jupyterServerType": "local"
+    "jupyter.jupyterServerType": "local",
+    "editor.formatOnSave": true
 }
